--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -10,13 +10,13 @@
   <div class="editform-row">
     <div class="editform-row-block">
       <div class="editform-label">Mennyiség</div>
-      <input type="number" class="editform-edit em6width" id="mennyiseg"
+      <input type="number" class="editform-number" id="mennyiseg"
              [(ngModel)]="item.Mennyiseg" name="mennyiseg">
     </div>
 
     <div class="editform-row-block">
       <div class="editform-label">Egységár</div>
-      <input type="number" class="editform-edit em6width" id="egysegar"
+      <input type="number" class="editform-number" id="egysegar"
              [(ngModel)]="item.EgysegAr" name="egysegar">
     </div>
   </div>
@@ -24,13 +24,13 @@
   <div class="editform-row">
     <div class="editform-row-block">
       <div class="editform-label">Egys. teljesítmény</div>
-      <input type="number" class="editform-edit em6width" id="egysegnyi"
+      <input type="number" class="editform-number" id="egysegnyi"
              [(ngModel)]="item.EgysegnyiTeljesitmeny" name="egysegnyi">
     </div>
 
     <div class="editform-row-block">
       <div class="editform-label">Garancia</div>
-      <input type="number" class="editform-edit em6width" id="garancia"
+      <input type="number" class="editform-number" id="garancia"
              [(ngModel)]="item.Garancia" name="garancia">
     </div>
   </div>
