--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -24,7 +24,7 @@
 
       <div class="editform-row-block">
         <div class="editform-label">Termelés</div>
-        <input type="number" class="editform-edit em6width" id="termeles"
+        <input type="number" class="editform-number" id="termeles"
                required
                [(ngModel)]="AjanlatParam.Termeles" name="termeles">
       </div>
