--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -28,21 +28,21 @@
     <div class="editform-row">
       <div class="editform-row-block">
         <div class="editform-label">Netto</div>
-        <input type="number" class="editform-edit em9width" id="netto1"
+        <input type="number" class="editform-number" id="netto1"
                disabled="true"
                [(ngModel)]="ComplexDtoEdited.Dto.Netto">
       </div>
 
       <div class="editform-row-block">
         <div class="editform-label">Áfa</div>
-        <input type="number" class="editform-edit em9width" id="afa1"
+        <input type="number" class="editform-number" id="afa1"
                disabled="true"
                [(ngModel)]="ComplexDtoEdited.Dto.Afa">
       </div>
 
       <div class="editform-row-block">
         <div class="editform-label">Brutto</div>
-        <input type="number" class="editform-edit em9width" id="brutto1"
+        <input type="number" class="editform-number" id="brutto1"
                disabled="true"
                [(ngModel)]="ComplexDtoEdited.Dto.Brutto">
       </div>
@@ -61,7 +61,7 @@
 
       <div class="editform-row-block">
         <div class="editform-label">Árfolyam</div>
-        <input type="number" class="editform-edit em6width" id="arfolyam"
+        <input type="number" class="editform-number" id="arfolyam"
                [(ngModel)]="ComplexDtoEdited.Dto.Arfolyam">
       </div>
     </div>
