--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="editform-row">
         <div class="editform-label">Egységár</div>
-        <input type="number" class="editform-combo em6width" id="egysegar"
+        <input type="number" class="editform-number" id="egysegar"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Termekdijegysegar" name="egysegar">
     </div>
