--- a/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
+++ b/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
@@ -23,7 +23,7 @@
 
       <div class="editform-row">
         <div class="editform-label">AC, kVA</div>
-        <input type="number" class="editform-edit em6width" id="ackva"
+        <input type="number" class="editform-number" id="ackva"
                [(ngModel)]="DtoEdited.Ackva"
                name="ackva">
       </div>
@@ -47,7 +47,7 @@
 
       <div class="editform-row">
         <div class="editform-label">DC, kW</div>
-        <input type="number" class="editform-edit em6width" id="dckw"
+        <input type="number" class="editform-number" id="dckw"
                [(ngModel)]="DtoEdited.Dckw"
                name="dckw">
       </div>
