--- a/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -38,7 +38,7 @@
 
       <div class="editform-row">
         <div class="editform-label">Vállalási ár</div>
-        <input type="number" class="editform-edit em10width" id="var"
+        <input type="number" class="editform-number" id="var"
                required
                [(ngModel)]="DtoEdited.Vallalasiarnetto" name="var">
       </div>
