--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Összeg</div>
-        <input type="number" class="editform-edit em10width" id="osszeg"
+        <input type="number" class="editform-number" id="osszeg"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Osszeg" name="osszeg">
       </div>
