--- a/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
+++ b/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
@@ -15,7 +15,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Összeg</div>
-        <input type="number" class="editform-edit em10width" id="osszeg"
+        <input type="number" class="editform-number" id="osszeg"
                [(ngModel)]="DtoEdited.Osszeg" name="osszeg">
       </div>
     </div>
