--- a/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
+++ b/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
@@ -5,21 +5,21 @@
 
     <div class="editform-row">
         <div class="editform-label">Bizonylatkép iratkód</div>
-        <input type="number" class="editform-edit em6width" id="m1"
+        <input type="number" class="editform-number" id="m1"
                autocomplete="off"
                [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Eredeti példány</div>
-        <input type="number" class="editform-edit em6width" id="m2"
+        <input type="number" class="editform-number" id="m2"
                autocomplete="off"
                [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Másolatok</div>
-        <input type="number" class="editform-edit em6width" id="m3"
+        <input type="number" class="editform-number" id="m3"
                autocomplete="off"
                [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
     </div>
