--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -59,7 +59,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Custom port</div>
-        <input type="number" class="editform-edit em6width" id="m7"
+        <input type="number" class="editform-number" id="m7"
                autocomplete="off"
                [(ngModel)]="cEmails[selected].CustomPort" name="m7">
       </div>
