--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="editform-row">
       <div class="editform-label">Az ÁFA mértéke, %</div>
-      <input type="number" class="editform-edit em10width" id="egysegar"
+      <input type="number" class="editform-number" id="egysegar"
              required autocomplete="off"
              [(ngModel)]="DtoEdited.Afamerteke" name="egysegar">
     </div>
