--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -32,7 +32,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Megjegyzés (tárgy)</div>
-        <input type="text" class="editform-edit em30width" id="megjegyzes"
+        <input type="text" class="editform-edit megjegyzeswidth" id="megjegyzes"
                maxlength="200" autocomplete="off"
                [(ngModel)]="AjanlatParam.Megjegyzes" name="megjegyzes">
     </div>
