--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -45,14 +45,14 @@
 
         <div class="editform-row">
           <div class="editform-label">Cím</div>
-            <input type="text" class="editform-edit em15width" id="ugyfelcim"
+            <input type="text" class="editform-edit cimwidth" id="ugyfelcim"
                    autocomplete="off" readonly="true" disabled="true"
                    [(ngModel)]="DtoEdited.Ugyfelcim" name="ugyfelcim">
         </div>
 
         <div class="editform-row">
             <div class="editform-label">Küldő</div>
-            <input type="text" class="editform-edit em15width" id="kuldo"
+            <input type="text" class="editform-edit ugyfelwidth" id="kuldo"
                    maxlength="100" autocomplete="off"
                    [(ngModel)]="DtoEdited.Kuldo" name="kuldo">
         </div>
