--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -42,7 +42,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Log</div>
-        <select type="text" class="editform-combo em4width"
+        <select type="text" class="editform-combo"
                 [(ngModel)]="DtoEdited.Logonlog" name="log">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
